# hyprmpv

./: CMakeLists.txt  README.md
includes/: HyprMpvConfig.h  HyprMpvSetup.h  HyprMpvUtils.h  HyprMvpCreateConfig.h
src/: HyprMpvConfig.cpp  HyprMpvMain.cpp  HyprMpvSetup.cpp  HyprMpvUtils.cpp  HyprMvpCreateConfig.cpp
tests/: theme.qml
